--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <button class="clear" id ="clear">Clear</button>
     <div class="container" id="container"></div>
   </body>
   <script src="script.js"></script>
